--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,7 +3,9 @@ db.driver=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/pp_crud?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
 db.username=hkl
 db.password=12345678
+#db.driverClassName=com.mysql.cj.jdbc.Driver
 
 # Hibernate properties
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
