--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -9,3 +9,5 @@ db.password=12345678
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+characterEncoding=UTF-8
+useUnicode=true
